--- a/public/global.css
+++ b/public/global.css
@@ -11,3 +11,8 @@ body {
     place-items: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+body[data-theme="dark"] {
+    color: #eee;
+    background-color: #212121;
+}
