--- a/public/global.css
+++ b/public/global.css
@@ -6,6 +6,7 @@ html, body {
 
 body {
     color: #2c3e50;
+    background-color: #fff;
     margin: 0;
     display: grid;
     place-items: center;
