--- a/public/global.css
+++ b/public/global.css
@@ -11,6 +11,7 @@ body {
     display: grid;
     place-items: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 body[data-theme="dark"] {
